cmake_minimum_required(VERSION 3.26)
project(Uredaji)

set(CMAKE_CXX_STANDARD 17)

add_executable(Uredaji main.cpp
        Uredjaj.h
        Uredjaj.cpp
        Laptop.cpp
        Laptop.h
        Laptop.h
        Mobitel.cpp
        Mobitel.h
        Mobitel.h
        UredjajKolekcija.cpp
        UredjajKolekcija.h
        UredjajKolekcija.h)
